# gold-silver-finance-agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README-EN.md  README-en.md  README.en.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_once_clean.py  test_core.py
.github/: PULL_REQUEST_TEMPLATE.md  README-secrets.md
.github/ISSUE_TEMPLATE/: feature_request.md  issue_template.md
.github/workflows/: scheduled-monitor.yml  tests.yml
config/: config.example.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
src/agents/: macro_agent.py  quant_agent.py  risk_agent.py  scenario_agent.py
src/alert/: __init__.py  etf_comex_analyzer.py  indicator.py  trigger.py
src/features/: factor_engine.py
src/models/: xgboost_forecast.py
src/monitor/: __init__.py  base.py  cot.py  economic_calendar.py  guru_fetcher.py  news_monitor.py  price_monitor.py
src/notifier/: __init__.py  email.py  sender.py
src/research/: __init__.py  forecast.py  forecast_mixed.py  middle_east_scenario.py  report_summarizer.py  scenario_simulation.py
src/scheduler/: __init__.py  job.py
src/web/: app.py
src/web/static/: app.js
src/web/templates/: index.html
tests/: test_basic.py
