[project]
name = "gold-silver-finance-agent"
version = "0.1.0"
description = "AI 赋能黄金白银主动监控 Agent - 全自动监控行情 + AI分析 + 异动预警推送"
authors = [
  { name = "wzh", email = "wzh@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["fintech", "agent", "gold", "silver", "gold-silver", "finance", "quantitative-investing", "monitoring", "tushare", "notification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
  "requests>=2.31.0",
  "tushare>=1.2.58",
  "playwright>=1.40.0",
  "scrapling>=0.4",
  "curl-cffi>=0.6.0",
  "browserforge>=0.1.0",
  "schedule>=1.2.0",
  "pandas>=2.1.3",
  "numpy>=1.26.0",
  "pyyaml>=6.0",
  "openai>=1.0.0",
  "ta>=0.10.0",
  "parsel>=1.9.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.2",
  "jinja2>=3.1.0",
]

[project.scripts]
finance-agent = "main:main"
